
lib_LIBRARIES = libcpputil.a

#noinst_LIBRARIES = libcpputil.a

libcpputil_a_SOURCES = \
	tconfig.cpp tstring.cpp tline.cpp tlist.cpp ttextfile.cpp tconfigfile.cpp \
	tconfigstring.cpp tsection.cpp tconfigitem.cpp utils.cpp tintentry.cpp \
	tconfigentry.cpp tboolentry.cpp tdoubleentry.cpp tstringentry.cpp tvectorentry.cpp	tconfig.cpp tstring.cpp tline.cpp tlist.cpp ttextfile.cpp tconfigfile.cpp \
	tconfig.h tstring.h tline.h tlist.h ttextfile.h tconfigfile.h \
	tconfigstring.h tsection.h tconfigitem.h utils.h tintentry.h \
	tconfigentry.h tboolentry.h tdoubleentry.h tstringentry.h tvectorentry.h \
	tsizeentry.h tsizeentry.cpp

